--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icons" href="../src/images/madeira-flag.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Trocas e vendas Madeira</title>
+    <title>Trocas Madeira</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
