--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icons" href="../src/images/madeira-flag.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Trocas Madeira</title>
+    <title>Vendas Madeira</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
